plugins {
    id 'java-library'
    id 'jacoco'
    id 'maven-publish'
}

group 'org.apitome.core'
version '0.0.1'
sourceCompatibility = '1.11'
targetCompatibility = '1.11'

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation platform(libs.spring.boot.bom)
    api 'org.slf4j:slf4j-api:1.7.36'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.4'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.5'
    implementation 'org.springframework:spring-core'
    implementation 'org.springframework:spring-web'
    implementation 'org.springframework:spring-webflux'
    implementation 'io.projectreactor:reactor-test:3.4.14'
    implementation 'org.glassfish:jakarta.el'
    implementation libs.bundles.apache.httpcomponents

    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    testImplementation libs.bundles.junit
    testImplementation libs.bundles.mockito
    testImplementation libs.bundles.wiremock
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Logback version | JDK |       Enterprise Edition         |
    // ----------------+-----+----------------------------------+
    //     1.3.x       |  8  |  Java EE (javax.* namespace)     |
    //     1.4.x       | 11  |  Jakarta EE jakarta.* namespace) |
    // See https://logback.qos.ch/dependencies.html
    testImplementation 'ch.qos.logback:logback-core:1.4.14'
    testImplementation 'ch.qos.logback:logback-classic:1.4.14'
    testImplementation 'ch.qos.logback:logback-classic:1.4.14'
    testImplementation 'org.projectlombok:lombok:1.18.24'
    testImplementation 'org.mockito:mockito-core:4.8.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

publishing {
    publications {
        javaLibrary(MavenPublication) {
            from project.components.java
        }
    }
    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/fernandofernandez/apitome"
            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }
    }
}
